Get market by ticker
