# api/internal/ports/http/market/get_by_ticker.go
@@ -4,13 +4,12 @@ import (
 	"net/http"
 
 	"primedivident/internal/infrastructure/server/openapi"
-	"primedivident/internal/modules/market/query"
 )
 
-func (h HandlerMarket) GetMarket(w http.ResponseWriter, r *http.Request, marketId openapi.MarketId) {
+func (h HandlerMarket) GetMarketByTicker(w http.ResponseWriter, r *http.Request, ticker openapi.Ticker) {
 	respond := h.responder.Http(w, r)
 
-	market, err := h.queryGetById.Fetch(query.ID(marketId))
+	market, err := h.queryGetByTicker.Fetch(ticker)
 	if err != nil {
 		respond.Err(err)
 		return
